# rob_box_project

./: .actrc  .dockerignore  .env.example  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .yamllint.yml  ANIMATION_FIXES_2025-01-11.md  APRILTAG_INTEGRATION_QUICKREF.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_BUILD_FIXES_2025-10-11.md  DOCUMENTATION_REORGANIZATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TIME_FIX.md  MIGRATION_APRILTAG_INTEGRATION.md  MIGRATION_PERCEPTION_LSLIDAR.md  QUICK_REFERENCE.md  README.md  SENSOR_HUB_INTEGRATION.md  SILERO_QUICK_START.md  SSML_ONLY_OPTIMIZATION.md  VOICE_ASSISTANT_AUDIT.md  VOICE_ASSISTANT_DOCKER_READY.md  VOICE_OPTIMIZATION_SUMMARY.md  reorganize_docs.sh  test_jsk_respeaker.py  test_jsk_simple.py  test_lidar.py  test_stt_launch.py  test_usb_vad.py  test_voice_assistant.launch.py  test_vosk_simple.py
.devcontainer/: Dockerfile
.github/: CI_CD_README.md  PULL_REQUEST_TEMPLATE_PERCEPTION_REVIEW.md  README.md  WORKFLOWS_GUIDE.md  WORKFLOWS_QUICKSTART.md  copilot-instructions.md
FROM_FUSION_360/: CMakeLists.txt  MESH_STRUCTURE.md  package.xml
docker/: .env.develop  .env.feature  .env.main  AGENT_GUIDE.md  BASH_ALIASES.md  BUILD_OPTIMIZATION.md  CHANGES.md  DOCKER_STANDARDS.md  LSLIDAR_SETUP.md  QUICK_START_RU.md  README_RU.md  SUMMARY.md  ZENOH_VIDEO_GUIDE.md  diagnose_data_flow.sh  monitor_system.sh  tune.sh
docs/: ARCHITECTURE.md  CI_CD_PIPELINE.md  DOCKER_TAG_MANAGEMENT.md  DOCUMENTATION_AUDIT_2025-10-11.md  DOCUMENTATION_STRUCTURE.md  HARDWARE.md  MONITORING_QUICK_REF.md  README.md  README_NEW.md  SOFTWARE.md  WORKFLOW_CHANGES.md
host/: README.md
local_test/: README.md  auto_test.sh  auto_test.sh.old  (+13 more)
src/rob_box_animations/: AUDIO_REACTIVE.md  CMakeLists.txt  README.md  package.xml
src/rob_box_animations/animations/: ANIMATIONS_LIST.md  README.md  manifest_schema.py
src/rob_box_animations/animations/frames/: README.md
src/rob_box_animations/animations/manifests/: accelerating.yaml  ambulance.yaml  angry.yaml  braking.yaml  charging.yaml  error.yaml  fire_truck.yaml  happy.yaml  idle.yaml  low_battery.yaml  police_lights.yaml  road_service.yaml  sad.yaml  sleep.yaml  surprised.yaml  talking.yaml  thinking.yaml  turn_left.yaml  turn_right.yaml  victory.yaml  wakeup.yaml
src/rob_box_animations/docs/: ANIMATIONS.md
src/rob_box_animations/launch/: animation_player.launch.py
src/rob_box_animations/rob_box_animations/: __init__.py  animation_loader.py  animation_player.py  frame_renderer.py
src/rob_box_animations/scripts/: animation_player_node.py  animation_test.py  audio_reactive_animation_node.py
src/rob_box_bringup/: CMakeLists.txt  package.xml  setup.py
src/rob_box_bringup/launch/: complete_system.launch.py  display.launch.py  display_simple.launch.py  rob_box_control.launch.py
src/rob_box_bringup/resource/: rob_box_bringup
src/rob_box_bringup/scripts/: dummy_joint_state_publisher.py  start_robot_state_publisher.py
src/rob_box_perception/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/rob_box_perception/launch/: internal_dialogue.launch.py  internal_dialogue_docker.launch.py
src/rob_box_perception/msg/: PerceptionEvent.msg
src/rob_box_perception/prompts/: README.md  context_summarization_prompt.txt  reflection_prompt.txt  reflection_user_response_prompt.txt
src/rob_box_perception/rob_box_perception/: context_aggregator_node.py  health_monitor.py  reflection_node.py  startup_greeting_node.py  vision_stub_node.py
src/rob_box_perception/rob_box_perception/utils/: __init__.py  internet_monitor.py  long_term_memory.py  node_monitor.py  time_provider.py
src/rob_box_voice/: HOW_TO_RUN.md  INSTALL.md  PITCH_SHIFT_EXPLANATION.md  QUICKSTART_TTS_TRAINING.md  README.md  SECRETS_GUIDE.md  package.xml  pytest.ini  requirements.txt  setup.cfg  setup.py
src/rob_box_voice/config/: accent_replacements.json  secrets.yaml.example  voice_assistant.yaml
src/rob_box_voice/dataset/: README_CUSTOM_VOICE.md  robbox_sentences_example.txt
src/rob_box_voice/docs/: ACCENT_RESEARCH.md  ACCENT_SOLUTION.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG_TTS_2025-10-13.md  PHASE2_IMPLEMENTATION.md  PHASE3_STT_IMPLEMENTATION.md  PHASE3_STT_TESTING.md  PHASE4_SOUND_IMPLEMENTATION.md  PHASE5_COMMAND_IMPLEMENTATION.md  SILERO_TTS_RASPBERRY_PI.md  STT_TTS_RESEARCH.md  VOICE_ASSISTANT_ARCHITECTURE.md  VOICE_ASSISTANT_AUDIT.md  VOICE_ASSISTANT_SESSION_SUMMARY.md  VOICE_FORMATTING_QUICK.md  VOICE_FORMATTING_RULES.md
src/rob_box_voice/launch/: basic_test.launch.py  voice_assistant.launch.py
src/rob_box_voice/prompts/: JSON_FORMAT_GUIDE.md  master_prompt.txt  master_prompt_simple.txt
src/rob_box_voice/rob_box_voice/: audio_node.py  command_node.py  dialogue_node.py  led_node.py  sound_node.py  stt_node.py  tts_node.py
src/rob_box_voice/rob_box_voice/utils/: __init__.py  audio_utils.py  respeaker_interface.py
src/rob_box_voice/scripts/: QUICK_START_CHAT.md  QUICK_START_TTS_TESTING.md  README_DEEPSEEK_GENERATOR.md  README_SILERO_GUI.md  README_TTS_TESTING.md  ROBBOX_CHAT_README.md  __init__.py  accent_dict.py  accent_replacer.py  configure_respeaker_aec.py  diagnose_white_noise.py  example_voice_usage.py  generate_dataset.sh  generate_phrases_deepseek.py  quick_start_stt.sh  record_yandex_voice.py  record_yandex_voice_v1_old.py  requirements_gui.txt  requirements_stt_test.txt  requirements_yandex_v3.txt  robbox_chat.py  robbox_chat_streaming.py  silero_config.json  silero_tts_gui.py  test_accentuation_libraries.py  test_command_node.py  test_respeaker.py  test_sound_node.py  test_streaming_ssml_only.py  test_stt_options.py  test_tts_voices.py  test_yandex_v3.py  text_normalizer.py  text_normalizer_v2.py
src/rob_box_voice/test/: test_audio_node.py  test_dialogue_node.py  test_dialogue_tts_sync.py  test_ssml_parsing.py
src/rob_box_voice/training/: README.md  check_system.py  setup_training_env.sh  train_coqui.py  train_piper.py
src/robot_sensor_hub_msg/: CMakeLists.txt  README.md  package.xml
src/robot_sensor_hub_msg/msg/: DeviceCommand.msg  DeviceData.msg  DeviceSnapshot.msg
(+389 files in other folders)
